# mprpc

./: CMakeLists.txt  autobuild.sh
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  userService.cc
example/caller/: CMakeLists.txt  callerUserservice.cc
lib/include/: mprpcaplication.h  mprpccontroller.h  rpcheader.pb.h  safequeue.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcaplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: logger.h  mprpcchannel.h  mprpcconfig.h  rpcprovider.h
